--- a/presentation/index.html
+++ b/presentation/index.html
@@ -6,7 +6,7 @@
 
 		<title>Look, no media queries — Vasilis van Gemert</title>
 
-		<meta name="description" content="There are a few ways to create responsive websites without media querie">
+		<meta name="description" content="There are a few ways to create responsive websites without media queries">
 		<meta name="author" content="Vasilis van Gemert">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -41,58 +41,58 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-markdown="sl-intro.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-intro.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<!-- <section data-markdown="sl-balls-examples.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<!-- <section data-markdown="sl-balls-examples.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section> -->
-				<section data-markdown="sl-float.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-float.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<section data-markdown="sl-column.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-column.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<section data-markdown="sl-target.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-target.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<section data-markdown="sl-flexbox.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-flexbox.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<!-- <section data-markdown="sl-vmin.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<!-- <section data-markdown="sl-vmin.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section> -->
-				<section data-markdown="sl-quantity.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-quantity.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
-				<section data-markdown="sl-thanks.md"  
-				         data-separator="^\n\n\n"  
-				         data-separator-vertical="^\n\n"  
-				         data-separator-notes="^Note:"  
+				<section data-markdown="sl-thanks.md"
+				         data-separator="^\n\n\n"
+				         data-separator-vertical="^\n\n"
+				         data-separator-notes="^Note:"
 				         data-charset="utf-8">
 				</section>
 			</div>
